--- a/Entrega1/platformio.ini
+++ b/Entrega1/platformio.ini
@@ -15,5 +15,14 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 1000000
 
-[env:P2_sensor]
-build_src_filter = +<Practica 2/sensor/*>
+[env:P1_ticker_serial]
+build_src_filter = +<ticker_serial/*>
+
+[env:P1_pwd]
+build_src_filter = +<pwd/*>
+
+[env:P1_interrupcion_estados]
+build_src_filter = +<interrupcion_estados/*>
+
+[env:P1_entrega]
+build_src_filter = +<entrega/*>
