Netrega 2 lista para su publicación

--- a/Entrega3/platformio.ini
+++ b/Entrega3/platformio.ini
@@ -1,4 +1,3 @@
-
 ; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
@@ -9,17 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env]
+[env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
 upload_speed = 1000000
-lib_deps = 
-    Ticker
-    MPU6050
-
-[env:P2_sensor]
-build_src_filter = +<Practica 2/sensor/*>
-[env:T3_sensor]
-build_src_filter = +<tema3/*>
