--- a/Cacharreo/platformio.ini
+++ b/Cacharreo/platformio.ini
@@ -8,11 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
+[env]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
-upload_speed = 1000000
+upload_speed = 1152000
 lib_deps = 
-    ESP8266WiFi
+    knolleary/PubSubClient
+
+[env:MQTT]
+build_src_filter = +<MQTT/*>
