--- a/Entrega1/platformio.ini
+++ b/Entrega1/platformio.ini
@@ -14,6 +14,9 @@ board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
 upload_speed = 1000000
+lib_deps = 
+    arduino
+    Ticker
 
 [env:P1_ticker_serial]
 build_src_filter = +<ticker_serial/*>
