Add ConjuntoSensores implementation with WiFi and MQTT support; update platformio.ini for new libraries

--- a/Entrega Final/platformio.ini
+++ b/Entrega Final/platformio.ini
@@ -21,6 +21,8 @@ lib_deps =
     OneWire
     wire
     DallasTemperature
+    PubSubClient
+    Wifi
     
 [env:SensorCH]
 build_src_filter = +<SensorCH/*>
@@ -32,3 +34,5 @@ build_src_filter = +<SensorTDS/*>
 build_src_filter = +<SensorTemperatura/*>
 [env:SensorTurbidez]
 build_src_filter = +<SensorTurbidez/*>
+[env:ConjuntoSensores]
+build_src_filter = +<ConjuntoSensores/*>
